Fix letter-spacing for h2 in form

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -113,7 +113,7 @@ h2 {
 
 #factory-video {
     width: 33vw;
-    height: 20vw;    
+    height: 20vw;
 }
 
 
@@ -233,9 +233,8 @@ li {
     width: 100%;
     height: 50vw;
     background: url('../images/hero-image.webp') no-repeat center center;
-    background-size: cover;    
+    background-size: cover;
     overflow: hidden;
-    
 }
 
 #contact-form {
@@ -253,26 +252,27 @@ li {
 
 form h2 {
     margin-bottom: 1vw;
+    letter-spacing: .1vw;
 }
 
 label {
     width: 100%;
     display: block;
     font-family: roboto, 'Times New Roman', Times, serif;
-
 }
-input, textarea {
+
+input,
+textarea {
     background-color: rgba(147, 157, 153, .6);
     border: 2px solid #a3b2ad;
     border-radius: 5px;
     width: 100%;
     height: 2vw;
     margin-bottom: 1vw;
-    color: #000;
+    color: #000109;
     font-weight: bold;
     font-family: roboto, 'Times New Roman', Times, serif;
     display: block;
-
 }
 
 textarea {
@@ -285,14 +285,15 @@ textarea {
     position: absolute;
     max-width: 33vw;
     bottom: 1vw;
-    color: #000;
+    color: #000109;
     font-weight: bold;
     font-family: roboto, 'Times New Roman', Times, serif;
 }
 
-input:hover, textarea:hover {    
+input:hover,
+textarea:hover {
     background-color: #a3b2ad;
-    color: #000;
+    color: #000109;
     font-family: roboto, 'Times New Roman', Times, serif;
 }
 
@@ -328,7 +329,6 @@ footer {
     height: 5vw;
     background-color: #a34c1f;
     font-family: roboto, 'Times New Roman', Times, serif;
-
 }
 
 footer a,
